# haskell-timer-chrome-ext

./: .gitignore  README.md  haskell-timer-chrome-ext.cabal  onOffButton.cabal  package.json  stack.yaml
app/: Main.hs
src/: Lib.hs
static/scss/: style.scss
