name:                 haskell-timer-chrome-ext
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Jigar Gosar
maintainer:           jigar.gosar@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable haskell-timer-chrome-ext
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  -- other-modules:
  -- other-extensions:
  build-depends:        base
                      , onOffButton
                      , haskell-src-exts >= 1.16 && < 1.18
                      , reflex == 0.4.0
                      , reflex-dom
                      , containers == 0.5.*
  hs-source-dirs:       app
  default-language:     Haskell2010
