name:                onOffButton
author:              David Lettier
version:             0.0.0.1
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base
                     , haskell-src-exts >= 1.16 && < 1.18
                     , reflex == 0.4.0
                     , reflex-dom
                     , containers == 0.5.*
                     , safe == 0.3.*
  default-language:    Haskell2010

executable onOffButton-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , onOffButton
                     , haskell-src-exts >= 1.16 && < 1.18
                     , reflex == 0.4.0
                     , reflex-dom
                     , containers == 0.5.*
                     , safe == 0.3.*
  default-language:    Haskell2010